feat(app): SPA redirect

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,26 @@
     <meta name="version" content="%REACT_APP_VERSION%" />
     <meta name="description" content="Чат: https://t.me/montehiking" />
 
+    <script type="text/javascript">
+      (function (l) {
+        if (l.search[1] === '/') {
+          const decoded = l.search
+            .slice(1)
+            .split('&')
+            .map(function (s) {
+              return s.replace(/~and~/g, '&');
+            })
+            .join('?');
+
+          window.history.replaceState(
+            null,
+            null,
+            l.pathname.slice(0, -1) + decoded + l.hash
+          );
+        }
+      })(window.location);
+    </script>
+
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
